--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,19 @@
         <artifactId>hadoop-minicluster</artifactId>
         <version>2.8.1</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
+    <dependency>
+        <groupId>org.yaml</groupId>
+        <artifactId>snakeyaml</artifactId>
+        <version>1.25</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
+    <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-sql_2.12</artifactId>
+        <version>2.4.3</version>
+    </dependency>
+
 
 </dependencies>
 
