final push version alpha

--- a/src/test/resources/ConfigTest/CsvReaderConfig.yaml
+++ b/src/test/resources/ConfigTest/CsvReaderConfig.yaml
@@ -1,5 +1,5 @@
 reader:
-  path: src/test/resources/TestFile.csv
+  path: hdfs://localhost:9000/test/source/TestFile.csv
   format: csv
   schema:
     - name: firstName
